@@ -1063,8 +1063,17 @@
           <td tal:define="field python:here.getField('restrictAccessToSecretItems')">
             <span metal:use-macro="here/widgets/field/macros/view" />
           </td>
+          <td tal:define="field python:here.getField('itemWithGivenAdviceIsNotDeletable')">
+            <span metal:use-macro="here/widgets/field/macros/view" />
+          </td>
+        </tr>
+        <tr valign="top">
           <td tal:define="field python:here.getField('ownerMayDeleteAnnexDecision')">
             <span metal:use-macro="here/widgets/field/macros/view" />
+          </td>
+          <td>
+          </td>
+          <td>
           </td>
         </tr>
         <tr valign="top">
